added more pages, example table, gallery, scripts etc.

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,11 @@
   letter-spacing: 0.2rem
 }
 
+.social_img{
+  width: 20px;
+  height: 20px;
+  display: inline;
+}
 .navigation {
   background-color: #33ffad;
   padding: 10px;
@@ -106,4 +111,135 @@ img {
   border: 2px solid #ccc;
   margin: 10px;
   box-shadow: 5px 5px 5px #888;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.homepage_navigation {
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.news{
+  display: block;
+  align-items: center;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article {
+  grid-column: span 2;
+  position: absolute;
+}
+
+.gallery_item{
+  display: inline;
+  width: 440px;
+  height: 440px;
+}
+
+.table_apl {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 0.3125rem;
+    margin: auto;
+}
+
+.grid-item {
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    gap: 0.3125rem;
+}
+
+.table_header{
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-align: left;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3125rem;
+    background-color: #f8f5f5;
+}
+
+.table_item{
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: left;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3125rem;
+    transition: background-color 0.3s ease;
+}
+
+.table_item:nth-child(odd){
+    background-color: #f2f2f2;
+}
+
+.table_item:nth-child(even){
+    background-color: #fdfdfd;
+}
+
+.table_item:hover {
+    background-color: #d7d7d7;
+}
+
+.news-image{
+  width: 30px;
+  height: 30px;
+}
+.news_content_image{
+  width: 600px;
+  height: 400px;
+}
+
+.news-section {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .news-item {
+      background-color: lightgray;
+      padding: 20px;
+      border-radius: 5px;
+    }
+
+    .news-title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 0;
+    }
+
+    .news-content {
+      margin-top: 10px;
+    }
+
+    .news-image {
+      max-width: 100%;
+      height: auto;
+      border-radius: 5px;
+    }
+
+.homepage_navigation_list_item.highlighted,
+.sports.highlighted {
+  background-color: #5F9EA0;
+  font-size: 1.45rem;
 }
