--- a/css/styles.css
+++ b/css/styles.css
@@ -132,11 +132,13 @@ img {
 
 .main {
   display: flex;
-  flex-direction: column;
+    flex-direction: column;
+    align-items: center;
 }
 
 .news{
   display: block;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -148,57 +150,15 @@ img {
 
 .article {
   grid-column: span 2;
-  position: absolute;
+}
+.gallery{
+  display: flex;
 }
 
 .gallery_item{
-  display: inline;
+  display: flex;
   width: 440px;
   height: 440px;
-}
-
-.table_apl {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.3125rem;
-    margin: auto;
-}
-
-.grid-item,
-.grid-item_scored {
-    display: grid;
-    grid-template-rows: repeat(10, 1fr);
-    gap: 0.3125rem;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3)
-}
-
-.table_header,
-.table_header_scored {
-    font-size: 1.2rem;
-    font-weight: 500;
-    text-align: left;
-    padding: 0.5rem 1rem;
-    border-radius: 0.3125rem;
-    background-color: #f8f5f5;
-}
-
-.table_item,
-.table_item_scored {
-    font-size: 1rem;
-    font-weight: 500;
-    text-align: left;
-    padding: 0.5rem 1rem;
-    border-radius: 0.3125rem;
-}
-
-.table_item:nth-child(odd),
-.table_item_scored:nth-child(odd) {
-    background-color: #f2f2f2;
-}
-
-.table_item:nth-child(even),
-.table_item_scored:nth-child(even) {
-    background-color: #fdfdfd;
 }
 
 .news-image{
@@ -240,7 +200,8 @@ img {
     }
 
 .homepage_navigation_list_item.highlighted,
-.sports.highlighted {
+.sports.highlighted,
+.cyber.highlighted {
   background-color: #5F9EA0;
   font-size: 1.45rem;
 }
@@ -267,4 +228,97 @@ img {
   justify-content: center;
   display: flex;
   }
+}
+
+@media screen and (max-width: 980px) {
+  .gallery {
+    flex-direction: column;
+  }
+}
+
+.table {
+  font-color: #80ffcc;
+  display: grid;
+  border-collapse: collapse;
+  min-width: 90%;
+  gap: 0.325rem;
+  grid-template-columns:
+    minmax(150px, 1fr)
+    minmax(150px, 1.67fr)
+    minmax(150px, 1.67fr)
+    minmax(150px, 1.67fr)
+    minmax(150px, 1.67fr)
+    minmax(150px, 1.67fr)
+    minmax(150px, 1.67fr)
+}
+
+.thead,
+.tbody,
+.tr {
+  display: contents;
+}
+
+.th,
+.td {
+  padding: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.th {
+  position: sticky;
+  top: 0;
+  background: #6c7ae0;
+  text-align: left;
+  font-weight: normal;
+  font-size: 1.1rem;
+  font-color: #80ffcc;
+}
+
+.th:last-child {
+  border: 1;
+}
+
+.td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-color: #80ffcc;
+}
+
+.tr:nth-child(even) td {
+  background: #f8f6ff;
+}
+
+.cyber {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.cyber_title {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.cyber_item {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #f9f9f9;
+  color: #333;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.homepage_navigation_list_item:hover,
+.sports:hover {
+  background-color: gray;
+}
+
+.highlighted {
+  background-color: gray !important;
+}
+
+.homepage_navigation_list_item:hover {
+  background-color: yellow;
 }
