added templates to the script, made a dropdown menu for input

--- a/css/styles.css
+++ b/css/styles.css
@@ -430,3 +430,9 @@ h1 {
   background-color: green;  color: green;
 }
 
+.templates-dropdown {
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
