--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,8 @@ h1 {
   border-radius: 5px;
 }
 
-.vote_form .button {
+.vote_form .button,
+.comments-section .button {
   padding: 10px 20px;
   margin: 5px;
   border: none;
@@ -412,9 +413,6 @@ h1 {
  a {  font-size: 2.5vh;
   line-height: 4.8vh;}
 
-.homepage_navigation_list:hover {
-  background-color: green;
-}
 
 .table-container {
   overflow-y: scroll; /* Включает вертикальную полосу прокрутки */
@@ -426,13 +424,33 @@ h1 {
   max-width: 1000px;
 }
 
-.homepage_navigation_list li.active {
-  background-color: green;  color: green;
-}
-
 .templates-dropdown {
   border-radius: 10px;
   background-color: #f2f2f2;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   padding: 10px;
+}
+
+.comments-section {
+display: inline-block;
+  padding: 10px 20px;
+  background-color: #f9f9f9;
+  color: #333;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.comments-list{
+display: inline-block;
+  padding: 10px 20px;
+  background-color: #81D8D0;
+  color: #333;
+  text-decoration: none;
+  border-radius: 5px;
+  border-color: #333;
+}
+
+.nav-active{
+    background-color: #ddd;
+    color: black;
 }
